--- a/fileclass.html
+++ b/fileclass.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="fileclass.css">
 </head>
-<body>
+<body style="background-color:blue">
 	<h1> in class self activity</h1>
 
 </body>
